--- a/04-CSS-Layouts/Challenge2/challenge2 Grid Css/style.css
+++ b/04-CSS-Layouts/Challenge2/challenge2 Grid Css/style.css
@@ -22,6 +22,7 @@ body {
   font-size: 22px;
   text-align: center;
   padding: 15px;
+  grid-column: 1/-1;
 }
 
 .product-title::before {
@@ -107,25 +108,12 @@ li {
   padding: 15px;
   width: 100%;
   border-top: 4px solid black;
+  grid-column: 4/-4;
 }
 
 .add-cart:hover {
   background-color: white;
   color: black;
-}
-
-.container {
-  display: flex;
-  gap: 40px;
-}
-
-.product-info {
-  flex: 1;
-}
-
-.product-details {
-  flex: 1;
-  margin-top: 10px;
 }
 
 .price {
@@ -141,12 +129,22 @@ li {
   margin-top: 10px;
 }
 
+.product-price {
+  display: flex;
+  justify-content: space-between;
+}
+
 .product-description {
   margin-bottom: 10px;
 }
 
-.product-price {
-  display: flex;
-  justify-content: space-between;
+.product-info {
   margin-top: 20px;
+}
+
+.product {
+  display: grid;
+  grid-template-columns: 250px 1fr 1fr;
+  grid-template-rows: 1fr;
+  column-gap: 40px;
 }
