--- a/04-CSS-Layouts/Style.css
+++ b/04-CSS-Layouts/Style.css
@@ -25,7 +25,7 @@ body {
   padding-left: 40px;
   padding-right: 40px; */
   padding: 20px 40px;
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
   /* height: 80px; */
 }
 
@@ -34,7 +34,7 @@ nav {
 }
 
 article {
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 
 .post-header {
@@ -308,7 +308,8 @@ footer {
   font-size: 14px;
 }
 
-.row {
+/* FLEXBOX LAYOUT */
+/* .row {
   display: flex;
   gap: 75px;
   margin-bottom: 60px;
@@ -321,9 +322,32 @@ article {
 }
 
 aside {
-  /* flex-grow: 0;
+ flex-grow: 0;
   flex-shrink: 1;
-  flex-basis: auto; */
+  flex-basis: auto; 
 
   flex: 0 0 300px;
+} */
+
+/*CSS GRID LAYOUT */
+.container {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  column-gap: 75px;
+  row-gap: 60px;
+  align-items: start;
+}
+
+.main-header {
+  grid-column: 1/3;
+}
+
+article {
+}
+
+aside {
+}
+
+footer {
+  grid-column: 1/-1;
 }
